# nissia-browser

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  LICENSE  README.md  install.ps1  install.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/nissia-browser/: SKILL.md  recipes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: release.yml
crates/nissia-cdp/: Cargo.toml
crates/nissia-cdp/src/: browser.rs  commands.rs  lib.rs
crates/nissia-cli/: Cargo.toml
crates/nissia-cli/src/: main.rs
crates/nissia-cli/src/cmd/: action.rs  agent.rs  batch.rs  browser.rs  mcp.rs  mod.rs  read.rs  record.rs  replay.rs  schema.rs  search.rs  session.rs  snap.rs  update.rs
crates/nissia-core/: Cargo.toml
crates/nissia-core/src/: behavior.rs  data_dir.rs  element_map.rs  lib.rs
crates/nissia-core/src/action/: click.rs  dismiss.rs  fill.rs  history.rs  key.rs  mod.rs  reload.rs  screenshot.rs  scroll.rs  select.rs  type_text.rs  wait.rs
crates/nissia-core/src/read/: mod.rs
crates/nissia-core/src/record/: recorder.rs  replay.rs  workflow.rs
crates/nissia-core/src/session/: profile.rs  storage.rs
crates/nissia-core/src/snap/: extractor.rs  mod.rs
docs/: GUIDE.md  SPEED.md  TOKEN-ECONOMY.md
examples/economy/: nissia-economy.ps1  nissia-economy.sh
scripts/: setup-hooks.sh
skills/nissia-browser/: SKILL.md  recipes.md
