[workspace]
resolver = "2"
members = [
    "crates/nissia-cdp",
    "crates/nissia-core",
    "crates/nissia-cli",
]

[workspace.package]
version = "0.3.4"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

# workspace crates
nissia-cdp = { path = "crates/nissia-cdp" }
nissia-core = { path = "crates/nissia-core" }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
