[package]
name = "nissia"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nissia"
path = "src/main.rs"

[dependencies]
nissia-cdp.workspace = true
nissia-core.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
regex = "1"
anyhow.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
